--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-XML-XSPF version 0.01
+XML-XSPF version 0.5
 =====================
 
 The README is used to introduce the module and provide instructions on
@@ -25,16 +25,16 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-  blah blah blah
+Class::Accessor
+Date::Parse
+HTML::Entities
+XML::Parser
+XML::Writer
 
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
-
-Copyright (C) 2006 by Dan Sully
+Copyright (c) 2006 Dan Sully & Slim Devices, Inc. All rights reserved. 
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.6 or,
 at your option, any later version of Perl 5 you may have available.
-
-
