--- a/Changes
+++ b/Changes
@@ -1,8 +1,12 @@
 Revision history for Perl extension XML::XSPF.
 
+0.5.1 Thu May  4 15:39:22 PDT 2006
+
+	- Removed INIT blocks - they were causing dynamic loading to fail.
+
 0.5   Thu May  4 10:52:04 PDT 2006
 
-	Initial CPAN release - implements parsing & serialization for XSPF Version 1 Spec.
+	- Initial CPAN release - implements parsing & serialization for XSPF Version 1 Spec.
 
 0.01  Wed May  3 14:51:42 2006
 	- original version; created by h2xs 1.23 with options
